# fun-cli

./: Cargo.toml  README-en.md  README.md
.github/workflows/: release.yml
src/: cli.rs  error.rs  main.rs
src/impls/: curl.rs  game.rs  handlers.rs  mod.rs  music.rs  os.rs  weather.rs
src/impls/games/: entities.rs  games.rs  mod.rs
src/impls/games/thunder_fighter/: entity.rs  game.rs  mod.rs
src/impls/osystem/: cpu.rs  disk.rs  memory.rs  mod.rs  process.rs
src/ui/: event.rs  mod.rs  theme.rs  widget.rs
src/utils/: chars.rs  consts.rs  mod.rs
