[package]
name = "fun"
version = "0.1.1"
edition = "2024"
description = "Life is too short for boring CLI tools."
repository = "https://gitee.com/boren07/fun-cli.git"
authors = ["boren1007@qq.com"]
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }

[[bin]]
name = "fun"