[package]
name = "fun-cli"
version = "0.1.1"
edition = "2024"
description = "Life is too short for boring CLI tools."
repository = "https://gitee.com/boren07/fun-cli.git"
authors = ["boren1007@qq.com"]
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
# 读取音频文件
rodio = { version = "0.19.0", features = ["mp3", "flac"] }
# 音频fft处理 信号转换
rustfft = { version = "6.1" }
# 序列化工具
serde = { version = "1.0.210" ,  features = ["derive","default"]}
serde_json = { version = "1.0.128" }

#  网络请求
reqwest = { version = "0.12.7" ,features = ["blocking",  "json", "gzip","multipart"]}

[[bin]]
name = "fun"
path = "src/main.rs"