[package]
name = "fun-cli"
version = "1.0.0"
edition = "2024"
description = "Life is too long, but fun CLIs are too few."
repository = "https://github.com/boren07/fun-cli"
authors = ["boren1007@qq.com"]
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
# 读取音频文件
rodio = { version = "0.19.0", features = ["mp3", "flac"] }
# 音频fft处理 信号转换
rustfft = { version = "6.1" }
# 序列化工具
serde = { version = "1.0.210" ,  features = ["derive","default"]}
serde_json = { version = "1.0.128" }

url = { version = "2.5.2"}
#  网络请求
reqwest = { version = "0.12.7" ,features = ["blocking",  "json", "gzip","multipart"]}
# 终端控制与调色
crossterm = { version = "0.28.1" }
rand = "0.8.5"
# unicode字符宽度处理
unicode-width = "0.2.0"

#获取系统信息
sysinfo = "0.31"
# 获取网络套接字信息
netstat2 = "0.11"

[[bin]]
name = "fun"
path = "src/main.rs"
